02-distributed/paso3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-api-front-ingress
  namespace: ejercicio-02
  labels:
    name: todo-api-front-ingress
spec:
  rules:
  - host: lc-todo.edu
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: todo-api-sv
            port:
              number: 3000
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: todo-front-sv
            port:
              number: 80
